test: rewrite and fix JUnit tests